atualizando informações do usuário 27.02.2025

--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Portifólio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/global.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Script AOS - Animações -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="app">
+      <section class="card user">
+        <picture>
+          <img src="./assets/eu.jpg" alt="Minha Imagem" />
+        </picture>
+
+        <div class="user_content">
+          <h1>Daniel Silva Santos</h1>
+          <p><span>Desenvolvedor Frontend</span></p>
+        </div>
+      </section>
+      <section class="card">about</section>
+      <section class="card projects">project</section>
+    </div>
+  </body>
 </html>
