--- a/index.html
+++ b/index.html
@@ -21,16 +21,81 @@
     <div class="app">
       <section class="card user">
         <picture>
-          <img src="./assets/eu.jpg" alt="Minha Imagem" />
+          <img src="./assets/eu/eu.jpg" alt="Minha fotográfia" />
         </picture>
 
         <div class="user_content">
           <h1>Daniel Silva Santos</h1>
           <p><span>Desenvolvedor Frontend</span></p>
+
+          <div class="social">
+            <a
+              href="https://www.linkedin.com/in/devdanielsilva/"
+              class="social_link"
+              target="_blank"
+            >
+              <i class="ph-light ph-linkedin-logo"></i>
+            </a>
+            <a
+              href="https://github.com/devdanielsilva"
+              class="social_link"
+              target="_blank"
+            >
+              <i class="ph-light ph-github-logo"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/devdanielsilva/"
+              class="social_link"
+              target="_blank"
+            >
+              <i class="ph-light ph-instagram-logo"></i>
+            </a>
+          </div>
         </div>
       </section>
-      <section class="card">about</section>
-      <section class="card projects">project</section>
+      <section class="card about">
+        <h2 class="subtitle">Sobre</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+          magni at recusandae autem fuga ea, officia laboriosam numquam nostrum
+          error dolor, accusamus quaerat. Itaque non laudantium quisquam dolore
+          sed deleniti.
+        </p>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa delectus
+          eum hic minus nam totam possimus. Itaque odit dolorem eum ab,
+          reprehenderit est nulla obcaecati, voluptatum suscipit quod, rerum
+          ducimus.
+        </p>
+
+        <p>
+          Quibusdam reprehenderit culpa atque repellendus rem exercitationem
+          pariatur reiciendis, nam aliquam veritatis.
+        </p>
+      </section>
+      <section class="card projects">
+        <h2 class="subtitle">Projetos</h2>
+
+        <div class="project_content">
+          <a href="" target="_blank">
+            <picture>
+              <img
+                src="assets/image projects/Galeria de fotográfia.png"
+                alt="Imagem da galeria de fotográfia"
+              />
+            </picture>
+
+            <strong>Galeria de fotográfias</strong>
+
+            <div>
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>Responsiva</span>
+            </div>
+          </a>
+        </div>
+      </section>
     </div>
   </body>
 </html>
