--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           </div>
         </div>
       </section>
+
+      <!--Card sobre mim!-->
       <section class="card about">
         <h2 class="subtitle">Sobre</h2>
         <p>
@@ -74,11 +76,13 @@
           pariatur reiciendis, nam aliquam veritatis.
         </p>
       </section>
+
+      <!--Card sobre os Projetos.-->
       <section class="card projects">
         <h2 class="subtitle">Projetos</h2>
 
         <div class="project_content">
-          <a href="" target="_blank">
+          <a href="" class="project" target="_blank">
             <picture>
               <img
                 src="assets/image projects/Galeria de fotográfia.png"
@@ -87,6 +91,40 @@
             </picture>
 
             <strong>Galeria de fotográfias</strong>
+
+            <div>
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>Responsiva</span>
+            </div>
+          </a>
+
+          <a href="" class="project" target="_blank">
+            <picture>
+              <img
+                src="assets/image projects/Formulario de Checkout para Pagamentos.png"
+                alt="Imagem do Formulario de Checkout para Pagamentos"
+              />
+            </picture>
+
+            <strong>Formulario de Checkout para Pagamentos</strong>
+
+            <div>
+              <span>HTML5</span>
+              <span>CSS3</span>
+              <span>Responsiva</span>
+            </div>
+          </a>
+
+          <a href="" class="project" target="_blank">
+            <picture>
+              <img
+                src="assets/image projects/Website.png"
+                alt="Imagem da Pizzaria Delivery"
+              />
+            </picture>
+
+            <strong>Pizzaria Delivery</strong>
 
             <div>
               <span>HTML5</span>
